Remove the hidden overflow from the code fragments since it prevented the italic chars from fully rendering, add different animation timings relative to the width of the viewport.

--- a/index.css
+++ b/index.css
@@ -181,7 +181,6 @@ button:disabled {
 }
 
 .scrolling-code {
-  overflow: hidden;
   z-index: 1;
   font-family: 'Encode Sans', sans-serif;
   font-size: 2em;
